--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -8,3 +8,7 @@ jobs:
         run: echo "Hello World!"
       - name: Print goodbye 
         run: echo "Done - bye!"
+    if: |
+        echo "First output"
+        echo "Seond output"
+        
